<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ethernity_gray">

    <TextView
        android:id="@+id/education_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/education_label"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/education_safety_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/ethernity_education_tips"
        android:textColor="@color/ethernity_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/education_title" />

    <View
        android:id="@+id/education_safety_highlight"
        android:layout_width="3dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:background="@color/ethernity_accent_orange"
        app:layout_constraintBottom_toBottomOf="@id/education_backup_reminder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/education_backup_reminder" />

    <TextView
        android:id="@+id/education_backup_reminder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/ethernity_backup_reminder"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/education_safety_highlight"
        app:layout_constraintTop_toBottomOf="@id/education_safety_tips" />

    <TextView
        android:id="@+id/education_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/ethernity_guide"
        android:textColor="@color/ethernity_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/education_backup_reminder" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/education_staking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:src="@drawable/ic_education_staking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/education_guide" />

    <TextView
        android:id="@+id/education_staking_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/ethernity_education_staking"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/education_staking"
        app:layout_constraintTop_toTopOf="@id/education_staking" />

    <TextView
        android:id="@+id/education_staking_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/ethernity_education_date"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/education_staking"
        app:layout_constraintTop_toBottomOf="@id/education_staking_text" />

    <androidx.cardview.widget.CardView
        android:id="@+id/education_operator_holder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/education_staking">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/education_operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_education_node_operator" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/education_operator_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:elevation="2dp"
        android:text="@string/ethernity_education_node_operator"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/education_operator_holder"
        app:layout_constraintTop_toTopOf="@id/education_operator_holder" />

    <TextView
        android:id="@+id/education_operator_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:text="@string/ethernity_education_date"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/education_operator_holder"
        app:layout_constraintTop_toBottomOf="@id/education_operator_text" />

</androidx.constraintlayout.widget.ConstraintLayout>