<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="32dp"
    android:layout_marginEnd="32dp"
    app:cardCornerRadius="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_card_texture">

        <TextView
            android:id="@+id/delete_wallet_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:lines="2"
            android:text="@string/delete_wallet_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/delete_wallet_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/large_32"
            android:layout_marginEnd="32dp"
            android:lines="1"
            android:text="@string/delete_wallet_description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_wallet_title" />

        <TextView
            android:id="@+id/delete_cancel"
            style="@style/Aw.Component.Dialog.ActionItem"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/background_white_round_corners_5"
            android:text="@string/action_cancel"
            android:textColor="@color/ethernity_accent_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/delete_wallet_description"
            app:layout_constraintTop_toBottomOf="@id/delete_wallet_description" />

        <TextView
            android:id="@+id/delete_confirmed"
            style="@style/Aw.Component.Dialog.ActionItem"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/background_rename_wallet_done"
            android:text="@string/action_remove"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/delete_wallet_description"
            app:layout_constraintStart_toEndOf="@id/delete_cancel"
            app:layout_constraintTop_toBottomOf="@id/delete_wallet_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>