<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/electric_blue_lightest"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/layout_new_wallet"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/splash_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_welcome_logo"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_new_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/large_32"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_import"
            style="@style/Aw.Component.Button.Secondary2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_import" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create"
            style="@style/Aw.Component.Button.Primary2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_wallet" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_watch"
            style="@style/Aw.Component.Button.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/mini_4"
            android:layout_weight="1.0"
            android:text="@string/watch"
            android:visibility="gone" />

    </LinearLayout>
</RelativeLayout>
